changed hat issue, whitespace, etc

--- a/src/assets/catalog.css
+++ b/src/assets/catalog.css
@@ -11,7 +11,7 @@
 #catalogHeader {
   /* padding: 80px 400px 120px 400px; */
   padding-right: 80px;
-  background-color: #fafafa;
+  background-color: white;
 }
 
 #catalogHeader > div {
