--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -12,6 +12,7 @@
   transition: opacity .5s ease;
   margin-bottom: 0;
   width: 900px;
+  height: 100%;
 }
 
 .carouselWrap > img:first-of-type {
@@ -28,7 +29,7 @@
   background: #84754E;
   border: none;
   cursor: pointer;
-  padding: 15px 35px;
+  padding: 7.5px 25px;
   line-height: .8;
   transition: all .2s ease-in-out;
 }
